Fixed comment overflow to scroll

--- a/Summoners.Client/src/styles/post.css
+++ b/Summoners.Client/src/styles/post.css
@@ -110,5 +110,5 @@ body {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
-    overflow: hidden;
+    overflow: scroll;
   }    
